# nqueens-recog

./: .gitattributes  .gitignore  LICENSE  README.md  chk_stepwise.py  cspell.json  merge_xwing_size8_reruns.sh  pyproject.toml  rerun_xwing_size8_levels.sh  solve_all.py  solve_all.sh  solve_html.sh  tmp.txt
.github/workflows/: ci.yml  pages.yml
.venv-pypy/: pyvenv.cfg
all_solutions/: index.html  level_1.html  level_10.html  level_100.html  level_101.html  level_102.html  level_103.html  level_104.html  level_105.html  level_106.html  level_107.html  level_108.html  level_109.html  level_11.html  level_110.html  level_111.html  level_112.html  level_113.html  level_114.html  level_115.html  level_116.html  level_117.html  level_118.html  level_119.html  level_12.html  level_120.html  level_121.html  level_122.html  level_123.html  level_124.html  level_125.html  level_126.html  level_127.html  level_128.html  level_129.html  level_13.html  level_130.html  level_131.html  level_132.html  level_133.html  (+700 more)
notebooks/: hello_world.ipynb  nqueens-recog.ipynb
src/nqueens_recog/: __init__.py  __main__.py  display.py  grid_reader.py  hello.py  palette.py  solver.py  stepwise.py  url_reader.py
src/scripts/: chk_stepwise.py
tests/: conftest.py  test_chk_stepwise.py  test_grids.py  test_hello.py
