[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nqueens-recog"
version = "0.1.0"
description = "N-Queens recognition project"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "nbconvert>=7.0",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "opencv-python>=4.8",
    "pytesseract>=0.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
nqueens-recog = "nqueens_recog.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
